# Imagegenerator

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
src/: cli.py
src/app/: config.py  dependencies.py  logging.py  main.py
src/app/api/: routes_health.py  routes_images.py  routes_sessions.py
src/app/core/: enums.py  exceptions.py  models.py  provider_router.py  safety.py  schemas.py  session_manager.py
src/app/providers/: base.py  gemini_adapter.py  openai_adapter.py
src/app/services/: image_service.py
src/app/storage/: asset_store.py  db.py  repositories.py
src/app/utils/: files.py  ids.py  time.py
tests/: test_gemini_adapter_mock.py  test_health.py  test_openai_adapter_mock.py  test_provider_router.py  test_safety_mapping.py  test_sessions.py
