[build-system]
requires=["setuptools>=69","wheel"]
build-backend="setuptools.build_meta"

[project]
name="image-orchestrator"
version="0.1.0"
description="Unified multi-provider image generation/editing orchestration service"
requires-python=">=3.12"
dependencies=["fastapi>=0.115","uvicorn[standard]>=0.30","pydantic>=2.8","pydantic-settings>=2.3","sqlalchemy>=2.0","openai>=1.50","google-genai>=0.5","tenacity>=8.3","python-multipart>=0.0.9","pillow>=10.4","httpx>=0.27"]

[project.optional-dependencies]
dev=["pytest>=8.2","pytest-asyncio>=0.23","ruff>=0.6"]

[project.scripts]
image-service="cli:main"

[tool.setuptools]
package-dir={""="src"}

[tool.setuptools.packages.find]
where=["src"]

[tool.pytest.ini_options]
pythonpath=["src"]
asyncio_mode="auto"
